--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -143,6 +143,16 @@ layout: default
                                 </a>
                             </li>
                             {% endif %}
+                            {% if site.Linkedin_username %}
+                            <li>
+                                <a href="www.linkedin.com/in/{{ site.Linkedin_username }}" target="_blank">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fa fa-circle fa-stack-2x"></i>
+                                        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            {% endif %}
                             {% if site.zhihu_username %}
                             <li>
                                 <a target="_blank" href="https://www.zhihu.com/people/{{ site.zhihu_username }}">
