--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -145,7 +145,7 @@ layout: default
                             {% endif %}
                             {% if site.Linkedin_username %}
                             <li>
-                                <a href="www.linkedin.com/in/{{ site.Linkedin_username }}" target="_blank">
+                                <a href="www.linkedin.com/in/{{ site.Linkedin_username }}" >
                                     <span class="fa-stack fa-lg">
                                         <i class="fa fa-circle fa-stack-2x"></i>
                                         <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
